# sumreader

./: .coveragerc  .gitignore  AUTHORS.rst  LICENSE.txt  Makefile  Pipfile  README.md  README.rst  pipeline.py  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
examples/planets/: __main__.py  pipeline.py  summaries.py
reader/: __main__.py
src/sumreader/: __init__.py  __main__.py  data.py  monad.py  output.py  results.py  skeleton.py  summaries.py
src/sumreader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sumreader/: data.py  monad.py  output.py  type_mapper.py
tests/: conftest.py  data.csv  test_skeleton.py
