[tool.poetry]
name = "sumreader"
version = "0.1.0"
description = ""
authors = ["Stojan Jovanovic <stojanjo@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
requests = "^2.31.0"
jinja2 = "^3.1.2"
pyarrow = "^14.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
